--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,13 +4,16 @@ layout: default
 
 <article class="post">
   <h1>{{ page.title }}</h1>
+  <div class="attribution">
+    <div class="date">{{ page.date | date: "%B %e, %Y" }}</div>
+    {% if page.authors %}
+    <div class="authors"> {% include authors.html %}</div>
+    {% endif %}
+  </div>
+  
 
   <div class="entry">
     {{ content }}
-  </div>
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   {% include disqus.html %}
