--- a/_includes/authors.html
+++ b/_includes/authors.html
@@ -1,6 +1,6 @@
 {% assign authors = site.data.authors %}
-{% for author_id in include.authors %}
-{% assign author = authors[author_id] %}
+{% for author_email in include.authors %}
+{% assign author = authors[author_email] %}
 <span>By: </span>
 
 <span>{% if author.website %}<a class="author-website" href="{{author.website}}">{{author.name}}</a>{% else
