--- a/_includes/authors.html
+++ b/_includes/authors.html
@@ -1,13 +1,8 @@
-{% assign page_authors = [] %}
+{% assign authors = site.data.authors %}
+{% for author_email in include.authors %}
+{% assign author = authors[author_email] %}
 
-{% for author_email in include.post_authors %}
-    {{ site.authors | inspect }}
-    {% assign site_author = site.authors | where: "email", author_email  %}
-    {% if site_author.size > 0 %}
-        {% assign page_authors = page_authors | concat: site_author %}
-    {% endif %}
-{% endfor %}
+<span>{% if author.website %}<a class="author-website" href="{{author.website}}">{{author.name}}</a>{% else
+    %}{{author.name}}{% endif %}</span>{% unless forloop.last %}<span>,</span>{% endunless %}
 
-{% for author in page_authors %}
-<span><a class="author-website" href="{{author.url}}">{{author.name}}</a></span>{% unless forloop.last %}<span>,</span>{% endunless %}
 {% endfor %}
